# ESP32

./: ESP32S3原理图和资源分配.url  ESP32使用.md  ESP32官方编程手册.url  ESP32项目路径.md  README.md
Cjson简单函数解释/: Cjson简单函数解释.md
Study/: ESP32-MQTT-Onenet实现逻辑.xmind
Study/0-Templete-FreeRtos/: 配置说明书.md
Study/0-Templete-FreeRtos/components/Key/: CMakeLists.txt
Study/0-Templete-FreeRtos/components/MPU6050/: CMakeLists.txt  MPU6050.h
Study/0-Templete-FreeRtos/main/: Initial.c  Initial.h  main.c
Study/0-Templete/main/: main.c
Study/Component/: CMakeLists.txt
Study/Component/components/MyLED/: CMakeLists.txt  MyLED.c  MyLED.h
Study/Component/main/: main.c
Study/FreeRtos_01_multitask/main/: main.c
Study/FreeRtos_02_dataTransmit/main/: main.c
Study/FreeRtos_03_SignalData/: CMakeLists.txt
Study/FreeRtos_03_SignalData/main/: main.c
Study/FreeRtos_04_Timer-TR/main/: Initial.h  main.c
Study/FreeRtos_05_Task_Manager/main/: Initial.h  main.c
Study/HelloWorld/main/: CMakeLists.txt  main.c
Study/Key/: CMakeLists.txt
Study/Key/main/: main.c
Study/MPU6050/main/: main.c
Study/OLED/: CMakeLists.txt
Study/OLED/main/: main.c
Study/Timer/main/: main.c
Study/USART/main/: Initial.h  main.c
Study/WIFI_BLE/: CMakeLists.txt
Study/WIFI_BLE/main/: main.c
Study/WIFI_HTTP-CAM/main/: Initial.c  Initial.h  main.c
Study/WIFI_HTTP/main/: Initial.c  main.c
Study/WIFI_MQTT/main/: CMakeLists.txt  main.c
Study/WIFI_WebSokect/: CMakeLists.txt
Study/WIFI_WebSokect/main/: CMakeLists.txt  Initial.c  Initial.h  main.c
Study/WebSocket建立要点/: WebSocket建立要点.md
分区表/: 分区表.md
(+76 files in other folders)
